--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
        
         <div class="dol">
           <ol>
-            <li><a href="kup.html"><img src="/Users/dominikaandruchow/Desktop/html/img/IMG_1197.JPG" alt="zdjecie auta"></a></li>
-            <li><a href="kup.html"><img src="/Users/dominikaandruchow/Desktop/html/img/IMG_0797.JPG" alt="zdjecie auta2"></a></li>
-            <li><a href="kup.html"><img src="/Users/dominikaandruchow/Desktop/html/img/IMG_0712.JPG" alt="zdjecie auta3"></a></li>
+            <li><a href="kup.html"><img src="img/IMG_1197.JPG" alt="zdjecie auta"></a></li>
+            <li><a href="kup.html"><img src="img/IMG_0797.JPG" alt="zdjecie auta2"></a></li>
+            <li><a href="kup.html"><img src="img/IMG_0712.JPG" alt="zdjecie auta3"></a></li>
           </ol>
         </div>
       </section>
