--- a/kup.html
+++ b/kup.html
@@ -23,7 +23,7 @@
       <a href="#footer_sekcja" class="p1">Kontakt</a>
   </header>
 
-    <section class="galeria-gorna">
+    <div class="galeria-gorna">
         <ol>
           <li><img src="img/ob1.JPG" alt="Obraz 1"></li>
           <li><img src="img/ob2.JPG" alt="Obraz 2"></li>
@@ -34,7 +34,7 @@
           <li><img src="img/ob7.JPG" alt="Obraz 4"></li>
           <li><img src="img/ob8.JPG" alt="Obraz 5"></li>
         </ol>
-    </section>
+    </div>
    <section id="sklep">
 <div id="propozycje" style="display: flex; justify-content: center; margin-top: 10px;font-size: 30px; "> <h3 style="color: #5184bd;">Dostępne modele</h3></div>
 
