--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
     <header id="pierwsza_sekcja">
       <a href="index.html" class="p1">Strona Główna</a>
-      <a href="sprzedaz.html"class="p1">Kup samochód</a>
-      <a href="dziekujeny.html"class="p1">Sprzedaj samochód</a>
+      <a href="sprzedaz.html" class="p1">Kup samochód</a>
+      <a href="dziekujeny.html" class="p1">Sprzedaj samochód</a>
       <a href="kup.html" class="p1">Dostępne</a>
       
       <a href="#footer_sekcja" class="p1">Kontakt</a>
     </header>
 
-    <section id="sekcja_druga">
+    <div id="sekcja_druga">
         <div id="lewa2">
             <p id="p2" style="font-size:20px;"><strong style="font-size:30px;font-style: italic;">Z pasji do motoryzacji, z myślą o Tobie</strong><br>
             Od zawsze fascynowały mnie samochody — ich design, technologia i możliwości, jakie dają ludziom każdego dnia. Z pasji narodził się zawód, który dziś pozwala mi nie tylko otaczać się autami, ale przede wszystkim pomagać innym znaleźć pojazd dopasowany do ich potrzeb i budżetu. <br>
@@ -39,7 +39,7 @@
         <div id="prawa2">
           <img src="img/ppp.png" alt="Obraz 4" id="wiza">
         </div>
-    </section>
+    </div>
 
     <section id="sekcja_trzecia">
      <div id="tekst_2"> <a href="sprzedaz.html" style="color: white;">Interesuje Cię kupno samochodu?</a></div>
